--- a/gatsby-theme-events/package.json
+++ b/gatsby-theme-events/package.json
@@ -17,5 +17,9 @@
     "gatsby": "^2.23.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "dependencies": {
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-yaml": "^2.4.4"
   }
 }
