--- a/gatsby-theme-events/package.json
+++ b/gatsby-theme-events/package.json
@@ -19,7 +19,12 @@
     "react-dom": "^16.13.1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@mdx-js/react": "^1.6.5",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-yaml": "^2.4.4"
+    "gatsby-transformer-yaml": "^2.4.4",
+    "theme-ui": "^0.3.1"
   }
 }
