reconfigd theme-plugin back into a stand alone gatsby project to run as stand alone

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "private": true,
-  "workspaces": [ "gatsby-theme-events", "my-site" ]
+  "workspaces": [
+    "gatsby-theme-events",
+    "my-site",
+    "not-plugin-gatsby-theme-events"
+  ]
 }
